# polygonselector

./: MANIFEST.in  README.md  pyproject.toml  setup.py
polygonselector/: __init__.py  init.py
polygonselector/notebooks/: PolygonSelector.ipynb
tests/: Mesh.dxf  mesh.msh  test.shp  test_init.py
